DDW-418 - Align vertically the "News feed empty" message - container fixes

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -98,8 +98,14 @@
     &.emptyFeedContainer {
       height: 100%;
 
+      &.hasUpdate {
+        .newsFeedEmptyContainer {
+          height: calc(100% - 100px) !important;
+        }
+      }
+
       .newsFeedEmptyContainer {
-        height: calc(100% - 100px) !important;
+        height: 100%;
       }
     }
 
